--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
       <h2 class="projetos-titulo">Meus Projetos</h2>
       <div class="projeto-container">
         <div class="projeto-card">
-          <img src="/img/1.webp" alt="card1" class="card" />
+          <a href="https://njogo.netlify.app/" target="_blank">
+            <img src="/img/1.webp" alt="card1" class="card" />
+          </a>
           <div class="card-conteudo">
-            <h3 class="card-titulo">loja</h3>
+            <h3 class="card-titulo">Jogo#</h3>
             <p class="card-descricao">
               Descrição do projeto 1. Um projeto incrível que resolve problemas
               complexos de forma simples.
@@ -51,9 +53,9 @@
         </div>
 
         <div class="projeto-card">
-          <img src="/img/2.webp" alt="card2" class="card" />
+          <img src="" alt="card2" class="card" />
           <div class="card-conteudo">
-            <h3 class="card-titulo">loja2</h3>
+            <h3 class="card-titulo">Projeto em andamento</h3>
             <p class="card-descricao">
               Descrição do projeto 2. Um projeto incrível que resolve problemas
               complexos de forma simples.
@@ -61,9 +63,9 @@
           </div>
         </div>
         <div class="projeto-card">
-          <img src="/img/3.webp" alt="card3" class="card" />
+          <img src="" alt="card3" class="card" />
           <div class="card-conteudo">
-            <h3 class="card-titulo">loja3</h3>
+            <h3 class="card-titulo">Projeto em andamento</h3>
             <p class="card-descricao">
               Descrição do projeto 3. Um projeto incrível que resolve problemas
               complexos de forma simples.
