--- a/index.html
+++ b/index.html
@@ -46,19 +46,20 @@
           <div class="card-conteudo">
             <h3 class="card-titulo">Jogo#</h3>
             <p class="card-descricao">
-              Descrição do projeto 1. Um projeto incrível que resolve problemas
-              complexos de forma simples.
+              Um jogo da velha para se divertir com alguem ou contra uma IA
             </p>
           </div>
         </div>
 
         <div class="projeto-card">
           <img src="" alt="card2" class="card" />
+          <a href="https://jfinde.netlify.app/" target="_blank">
+            <img src="/img/2.webp" alt="card1" class="card" />
+          </a>
           <div class="card-conteudo">
-            <h3 class="card-titulo">Projeto em andamento</h3>
+            <h3 class="card-titulo">JobFinder</h3>
             <p class="card-descricao">
-              Descrição do projeto 2. Um projeto incrível que resolve problemas
-              complexos de forma simples.
+              Um site para procurar vagas, ou cadastrar a sua 
             </p>
           </div>
         </div>
